--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="process_start">процесс запущен</string>
     <string name="process_stop">процесс остановлен</string>
-    <string name="rand_number">случайное число: %d</string>
+    <string name="rand_number">предидущие число: %d текущие чеисло: %d</string>
     <string name="switch_to_rgb">ИЗМЕНИТЬ НА RGB</string>
     <string name="switch_to_argb">ИЗМЕНИТЬ НА ARGB</string>
     <string name="switch_to_all">ИЗМЕНИТЬ НА ВСЁ</string>
@@ -15,4 +15,10 @@
     <string name="getDataFromDb">ПОЛУЧИТЬ ИНФОРМАЦИЮ ИЗ БАЗЫ ДАННЫХ</string>
     <string name="deleteDataFromDB">УДАЛИТЬ ИНФОРМАЦИЮ ИЗ БАЗЫ ДАННЫХ</string>
     <string name="clearTextView">СТЕРЕТЬ ТЕКСТ</string>
+    <string name="getDataFromSrvice">ПОЛУЧИТЬ ИНФОРМАЦИЮ ПРО СЕРИВИС</string>
+    <string name="settingsText">СКРЫТЬ ЭЛЕМЕНТЫ МЕНЮ</string>
+    <string name="historyBox">ИСТОРИЯ</string>
+    <string name="databaseBox">БАЗА ДАННЫХ</string>
+    <string name="referenceBox">ССЫЛКА</string>
+    <string name="backProcessBox">СЕРВИС</string>
 </resources>
