--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="title_activity_reference" translatable="false">ReferenceActivity</string>
-    <string name="second_fragment_label">2 фрагмент</string>
+    <string name="second_fragment_label">2 fragment</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">first fragment</string>>
     <string name="process_start">process start</string>
     <string name="process_stop">process stop</string>
-    <string name="rand_number">random number: %d</string>
+    <string name="rand_number">previos number: %d current number: %d</string>
     <string name="switch_to_rgb">SWITCH TO RGB</string>
     <string name="switch_to_argb">SWITCH TO ARGB</string>
     <string name="switch_to_all">SWITCH TO ALL</string>
@@ -19,6 +19,12 @@
     <string name="getDataFromDb">GET DATA FROM DATABASE</string>
     <string name="deleteDataFromDB">DELETE DATA FROM DATABASE</string>
     <string name="clearTextView">CLEAN TEXT</string>
+    <string name="getDataFromSrvice">GET INFO ABOUT SERVICE</string>>
+    <string name="settingsText">HIDE MENU ELEMENTS</string>
+    <string name="historyBox">HISTORY</string>
+    <string name="databaseBox">DATABASE</string>
+    <string name="referenceBox">REFERENCE</string>
+    <string name="backProcessBox">SERVICE</string>
     <string-array name="size">
         <item>5</item>
         <item>10</item>
